--- a/index.html
+++ b/index.html
@@ -10,27 +10,23 @@
 <body>
     <header>
         <nav>
-            <a href="">webstudio</a>
+            <a href="./index.html">webstudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
-            <ul>
-                <li>
-                    <address>info@devstudio.com</address>
-                </li>
-                <li>
-                    <address>+110001111111</address>
-                </li>
-            </ul>
+            <address>
+                <li><a href="">info@devstudio.com</a></li>
+                <li><a href="">+11 (000) 111-11-11</a></li>
+            </address>
         </nav>
     </header>
     <main>
         <section>
             <h1>Effective Solutions
                 for Your Business</h1>
-            <button>Order Service</button>
+            <button type="button">Order Service</button>
         </section>
         <section>
             <ul>
@@ -56,30 +52,29 @@
                 </li>
             </ul>
         </section>
-        <section>
-            <h3>Our Team</h3>
+            <h2>Our Team</h2>
             <ul>
-                <li><img src="./images/img-1n.jpg" alt="Mark Guerrero" width="264" height="260">
-                    <h4>Mark Guerrero</h4>
+                <li><img src="./images/img-n.jpg" alt="Mark Guerrero" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
-                <li><img src="./images/img-2n.jpg" alt="Tom Ford" width="264" height="260">
-                    <h4>Tom Ford</h4>
+                <li><img src="./images/img-1.jpg" alt="Tom Ford" width="264" height="260">
+                    <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li><img src="./images/img-3n.jpg" alt="Camila Garcia" width="264" height="260">
-                    <h4>Camila Garcia</h4>
+                <li><img src="./images/img-2.jpg" alt="Camila Garcia" width="264" height="260">
+                    <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-                <li><img src="./images/img-4n.jpg" alt="Daniel Wilson" width="264" height="260">
-                    <h4>Daniel Wilson</h4>
+                <li><img src="./images/img-3.jpg" alt="Daniel Wilson" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="">webstudio</a>
+        <a href="./index.html">webstudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
