--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <li><a href="">Contacts</a></li>
             </ul>
             <address>
-                <li><a href="">info@devstudio.com</a></li>
-                <li><a href="">+11 (000) 111-11-11</a></li>
+                <li><a href="info@devstudio.com"></a></li>
+                <li><a href="+11(000)111-11-11"></a></li>
             </address>
         </nav>
     </header>
