index.html file

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav>
             <a href="webstudio"></a>
             <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a href="Studio"></a></li>
+                <li><a href="Portfolio"></a></li>
+                <li><a href="Contacts"></a></li>
             </ul>
             <address>
                 <li><a href="info@devstudio.com"></a></li>
