--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header>
         <nav>
             <address>
-                <li><a href="info@devstudio.com"></a></li>
-                <li><a href="+11(000)111-11-11"></a></li>
+                <li><a href="./index.html"></a>info@devstudio.com</li>
+                <li><a href="./index.html">+11(000)111-11-11</a></li>
             </address>
-            <a href="webstudio"></a>
+            <a href="">webstudio</a>
             <ul>
-                <li><a href="Studio"></a></li>
-                <li><a href="Portfolio"></a></li>
-                <li><a href="Contacts"></a></li>
+                <li><a href="./index.html">Studio</a></li>
+                <li><a href="./index.html">Portfolio</a></li>
+                <li><a href="./index.html">Contacts</a></li>
             </ul>
             
         </nav>
@@ -77,7 +77,7 @@
        </section>
     </main>
     <footer>
-        <a href="webstudio"></a>
+        <a href="./index.html">webstudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
