--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>
         <nav>
             <address>
-                <li><a href="./index.html"></a>info@devstudio.com</li>
-                <li><a href="./index.html">+11(000)111-11-11</a></li>
+                <li><a>info@devstudio.com</a></li>
+                <li><a>+11(000)111-11-11</a></li>
             </address>
             <a href="">webstudio</a>
             <ul>
