--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <header>
         <nav>
             <address>
-                <li><a>info@devstudio.com</a></li>
-                <li><a>+11(000)111-11-11</a></li>
+                <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="href=" tel:+110001111111">+11(000)111-11-11</a>
+            </li>
             </address>
             <a href="">webstudio</a>
             <ul>
