--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
     <header>
         <nav>
+        
             <address>
                 <li>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="href=" tel:+110001111111">+11(000)111-11-11</a>
+                <a href="href=" tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
             </address>
-            <a href="">webstudio</a>
             <ul>
                 <li><a href="./index.html">Studio</a></li>
                 <li><a href="./index.html">Portfolio</a></li>
                 <li><a href="./index.html">Contacts</a></li>
             </ul>
-            
+            <a href="./index.html">WebStudio</a>
         </nav>
     </header>
     <main>
@@ -81,7 +81,7 @@
        </section>
     </main>
     <footer>
-        <a href="./index.html">webstudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
