--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@
 
 <body>
     <header>
-        <a href="./index.html">WebStudio</a>
-        <nav>
-            <address>
-                <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </address>
-            <ul>
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="./index.html">Portfolio</a></li>
-                <li><a href="./index.html">Contacts</a></li>
-            </ul>
         
+        <nav>
+        <a href="./index.html">WebStudio</a>
+        <address>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+        </address>
 
+            <ul>  
+                <li><a href="attribute inside">Studio</a></li>
+                <li><a href="attribute inside">Portfolio</a></li>
+                <li><a href="attribute inside">Contacts</a></li>
+            </ul>
+       
         </nav>
     </header>
     <main>
