index.html file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <header>
         <nav>
         <a href="./index.html">WebStudio</a>
+        <ul>
+            <li><a href="attribute inside">Studio</a></li>
+            <li><a href="attribute inside">Portfolio</a></li>
+            <li><a href="attribute inside">Contacts</a></li>
+        </ul>
         <address>
             <li>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -20,11 +25,7 @@
             </li>
         </address>
 
-            <ul>  
-                <li><a href="attribute inside">Studio</a></li>
-                <li><a href="attribute inside">Portfolio</a></li>
-                <li><a href="attribute inside">Contacts</a></li>
-            </ul>
+            
        
         </nav>
     </header>
@@ -35,6 +36,7 @@
             <button type="button">Order Service</button>
         </section>
         <section>
+            <title>webstudio</title>
             <ul>
                 <li>
                     <h3>Strategy</h3>
