--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="attribute inside">Portfolio</a></li>
             <li><a href="attribute inside">Contacts</a></li>
         </ul>
+        </nav>
         <address>
             <li>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -24,15 +25,10 @@
                 <a href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </address>
-
-            
-       
-        </nav>
     </header>
     <main>
         <section>
-            <h1>Effective Solutions
-                for Your Business</h1>
+            <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
         <section>
