index.html file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
         <section>
             <h2>
-<title>webstudio</title>
+<title class="hidden">webstudio</title>
             </h2>
            
             <ul>
