index.html file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         </section>
         <section>
             <h2>
-<title class="hidden">webstudio</title>
+                <input type="hidden">
+<title>webstudio</title>
             </h2>
            
             <ul>
