index.html file

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </section>
         <section>
             <h2>
-                <input type="hidden">
-<title>webstudio</title>
+                <input type="hidden" title>webstudio</title>>
+
             </h2>
            
             <ul>
