--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         </ul>
         </nav>
         <address>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-            </li>
-            <li>
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a><br />
-            </li>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a><br />
+                </li>
+            </ul>
         </address>
     </header>
     <main>
@@ -31,10 +33,7 @@
             <button type="button">Order Service</button>
         </section>
         <section>
-            <h2>
-                <input type="hidden" title>webstudio</title>>
-
-            </h2>
+            <h2>Futures</h2>
            
             <ul>
                 <li>
