--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-            <li><a href="attribute inside">Studio</a></li>
-            <li><a href="attribute inside">Portfolio</a></li>
-            <li><a href="attribute inside">Contacts</a></li>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
         </ul>
         </nav>
         <address>
